[package]
name = "voxels-bevy-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0", features = ["dynamic_linking"] }
bevy_egui = "0.23.0"
block-mesh = "0.2.0"
egui_plot = "0.23.0"
futures-lite = "2.0.0"
noise = "0.8.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
